Added iframe for yt and logo responsive

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^4.6.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "dotenv": "^16.4.2",
     "joi": "^17.12.1",
@@ -19,6 +20,7 @@
     "next": "14.1.0",
     "nodemailer": "^6.9.9",
     "react": "^18",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-use-scroll-direction": "^0.1.0"
   },
