--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.12.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "nodemailer": "^6.9.9",
     "react": "^18",
