Added custom css and navbar

--- a/package.json
+++ b/package.json
@@ -11,27 +11,37 @@
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "animate.css": "^4.1.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^4.6.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "dotenv": "^16.4.2",
+    "formidable": "^3.5.1",
     "joi": "^17.12.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "nodemailer": "^6.9.9",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-photo-album": "^2.3.1",
     "react-use-scroll-direction": "^0.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/ckeditor__ckeditor5-build-classic": "^37.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/jquery": "^3.5.29",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
